Fixed z-index for inputs

--- a/Styles/Components/_BlogComment.scss
+++ b/Styles/Components/_BlogComment.scss
@@ -2,6 +2,10 @@
   width: 70%;
   padding-top: 15px;
   
+  input {
+    z-index: 20;
+  }
+  
   input[type=text] {
     background-color: $color-background-2;
     border: none;
